--- a/index.html
+++ b/index.html
@@ -3,7 +3,75 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Robert Garcia | Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="css/base.css" />
+    <link rel="stylesheet" href="css/header.css" />
+    <link rel="stylesheet" href="css/mobile-menu.css" />
+    <link rel="stylesheet" href="css/sections.css" />
   </head>
-  <body></body>
+  <body>
+    <header class="header">
+      <div class="header-container">
+        <div class="logo">
+          <span class="logo">Ani</span>
+          <span class="logo">metopishvili</span>
+        </div>
+
+        <nav class="nav">
+          <ul class="nav-links">
+            <li><a href="#home">Home</a></li>
+            <li><a href="#about">About Me</a></li>
+            <li><a href="#services">Services</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#testimonials">Testimonials</a></li>
+            <li><a href="#contact">Contact</a></li>
+          </ul>
+          <a href="#" class="btn-download">Download CV</a>
+        </nav>
+
+        <div class="burger" onclick="toggleMenu()">
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
+      </div>
+    </header>
+
+    <div class="mobile-menu" id="mobileMenu">
+      <a href="#home" onclick="closeMenu()">Home</a>
+      <a href="#about" onclick="closeMenu()">About Me</a>
+      <a href="#services" onclick="closeMenu()">Services</a>
+      <a href="#projects" onclick="closeMenu()">Projects</a>
+      <a href="#testimonials" onclick="closeMenu()">Testimonials</a>
+      <a href="#contact" onclick="closeMenu()">Contact</a>
+      <a href="#" class="btn-download">Download CV</a>
+    </div>
+
+    <section id="home">
+      <h2>Home</h2>
+    </section>
+    <section id="about">
+      <h2>About Me</h2>
+    </section>
+    <section id="services">
+      <h2>Services</h2>
+    </section>
+    <section id="projects">
+      <h2>Projects</h2>
+    </section>
+    <section id="testimonials">
+      <h2>Testimonials</h2>
+    </section>
+    <section id="contact">
+      <h2>Contact</h2>
+    </section>
+
+    <script src="scripts/mobile-menu.js"></script>
+  </body>
 </html>
