--- a/index.html
+++ b/index.html
@@ -181,11 +181,186 @@
         </div>
       </div>
     </section>
-    <section id="about">
-      <h2>About Me</h2>
+    <section id="about" class="about-section">
+      <div class="about-container">
+        <div class="about-image">
+          <div class="about-image-frame">
+            <img
+              src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?w=400&h=500&fit=crop&crop=face"
+              alt="About Me Photo"
+            />
+          </div>
+        </div>
+
+        <div class="about-content">
+          <h2 class="about-title">About Me</h2>
+          <p class="about-description">
+            Lorem ipsum dolor sit amet consectetur. Tristique amet sed massa
+            nibh lectus netus in. Aliquet donec morbi convallis pretium. Turpis
+            tempus pharetra
+          </p>
+
+          <div class="skills-container">
+            <div class="skill">
+              <span class="skill-name">UX</span>
+              <div class="skill-bar">
+                <div class="skill-progress" data-progress="95"></div>
+                <div class="skill-indicator"></div>
+              </div>
+            </div>
+
+            <div class="skill">
+              <span class="skill-name">Website Design</span>
+              <div class="skill-bar">
+                <div class="skill-progress" data-progress="90"></div>
+                <div class="skill-indicator"></div>
+              </div>
+            </div>
+
+            <div class="skill">
+              <span class="skill-name">App Design</span>
+              <div class="skill-bar">
+                <div class="skill-progress" data-progress="85"></div>
+                <div class="skill-indicator"></div>
+              </div>
+            </div>
+
+            <div class="skill">
+              <span class="skill-name">Graphic Design</span>
+              <div class="skill-bar">
+                <div class="skill-progress" data-progress="88"></div>
+                <div class="skill-indicator"></div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
-    <section id="services">
-      <h2>Services</h2>
+    <section id="services" class="services-section">
+      <div class="services-container">
+        <h2 class="services-title">Services</h2>
+        <p class="services-description">
+          Lorem ipsum dolor sit amet consectetur. Tristique amet sed massa nibh
+          lectus netus in. Aliquet donec morbi convallis pretium
+        </p>
+
+        <div class="services-grid">
+          <div class="service-card">
+            <div class="service-icon">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="48"
+                height="48"
+                viewBox="0 0 24 24"
+                fill="none"
+                stroke="#e8944c"
+                stroke-width="1.5"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              >
+                <rect x="3" y="3" width="18" height="18" rx="2" ry="2"></rect>
+                <line x1="3" y1="9" x2="21" y2="9"></line>
+                <line x1="9" y1="21" x2="9" y2="9"></line>
+                <rect x="11" y="12" width="6" height="5" rx="1"></rect>
+              </svg>
+            </div>
+            <h3 class="service-name">UI/UX</h3>
+            <p class="service-text">
+              Lorem ipsum dolor sit amet consectetur. Morbi diam nisi nam diam
+              interdum
+            </p>
+          </div>
+
+          <div class="service-card">
+            <div class="service-icon">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="48"
+                height="48"
+                viewBox="0 0 24 24"
+                fill="none"
+                stroke="#e8944c"
+                stroke-width="1.5"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              >
+                <rect x="5" y="2" width="14" height="20" rx="2" ry="2"></rect>
+                <line x1="12" y1="18" x2="12" y2="18"></line>
+                <rect x="8" y="6" width="8" height="8" rx="1"></rect>
+                <circle cx="12" cy="18" r="1" fill="#e8944c"></circle>
+              </svg>
+            </div>
+            <h3 class="service-name">Web Design</h3>
+            <p class="service-text">
+              Lorem ipsum dolor sit amet consectetur. Morbi diam nisi nam diam
+              interdum
+            </p>
+          </div>
+
+          <div class="service-card">
+            <div class="service-icon">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="48"
+                height="48"
+                viewBox="0 0 24 24"
+                fill="none"
+                stroke="#e8944c"
+                stroke-width="1.5"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              >
+                <rect x="5" y="2" width="14" height="20" rx="2" ry="2"></rect>
+                <line x1="9" y1="6" x2="15" y2="6"></line>
+                <line x1="9" y1="10" x2="15" y2="10"></line>
+                <line x1="9" y1="14" x2="15" y2="14"></line>
+                <path d="M9 18 L11 20 L15 16"></path>
+              </svg>
+            </div>
+            <h3 class="service-name">App Design</h3>
+            <p class="service-text">
+              Lorem ipsum dolor sit amet consectetur. Morbi diam nisi nam diam
+              interdum
+            </p>
+          </div>
+
+          <div class="service-card">
+            <div class="service-icon">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="48"
+                height="48"
+                viewBox="0 0 24 24"
+                fill="none"
+                stroke="#e8944c"
+                stroke-width="1.5"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              >
+                <rect x="3" y="3" width="18" height="14" rx="2" ry="2"></rect>
+                <line x1="3" y1="9" x2="21" y2="9"></line>
+                <path d="M8 21 L8 17"></path>
+                <path d="M16 21 L16 17"></path>
+                <path d="M12 21 L12 17"></path>
+                <rect
+                  x="6"
+                  y="11"
+                  width="4"
+                  height="3"
+                  rx="0.5"
+                  fill="#e8944c"
+                ></rect>
+                <rect x="14" y="11" width="4" height="3" rx="0.5"></rect>
+              </svg>
+            </div>
+            <h3 class="service-name">Graphic Design</h3>
+            <p class="service-text">
+              Lorem ipsum dolor sit amet consectetur. Morbi diam nisi nam diam
+              interdum
+            </p>
+          </div>
+        </div>
+      </div>
     </section>
     <section id="projects">
       <h2>Projects</h2>
@@ -199,5 +374,6 @@
 
     <script src="script/mobile-menu.js"></script>
     <script src="script/slider.js"></script>
+    <script src="script/skills.js"></script>
   </body>
 </html>
