Add Projects section with filters, and responsive styles

--- a/index.html
+++ b/index.html
@@ -362,8 +362,96 @@
         </div>
       </div>
     </section>
-    <section id="projects">
-      <h2>Projects</h2>
+    <section id="projects" class="projects-section">
+      <div class="projects-container">
+        <h2 class="projects-title">My Projects</h2>
+        <p class="projects-description">
+          Lorem ipsum dolor sit amet consectetur. Mollis erat duis aliquam
+          mauris est risus lectus. Phasellus consequat urna tellus
+        </p>
+
+        <div class="projects-filters">
+          <button class="filter-btn active" data-filter="all">All</button>
+          <button class="filter-btn" data-filter="ui-ux">UI/UX</button>
+          <button class="filter-btn" data-filter="web-design">
+            Web Design
+          </button>
+          <button class="filter-btn" data-filter="app-design">
+            App Design
+          </button>
+          <button class="filter-btn" data-filter="graphic-design">
+            Graphic Design
+          </button>
+        </div>
+
+        <div class="projects-grid">
+          <div class="project-card" data-category="ui-ux">
+            <div class="project-image">
+              <img
+                src="https://images.unsplash.com/photo-1561070791-2526d30994b5?w=400&h=300&fit=crop"
+                alt="UI/UX Project"
+              />
+            </div>
+            <span class="project-category">UI/UX</span>
+            <h3 class="project-name">Dashboard UI Design</h3>
+          </div>
+
+          <div class="project-card" data-category="web-design">
+            <div class="project-image">
+              <img
+                src="https://images.unsplash.com/photo-1467232004584-a241de8bcf5d?w=400&h=300&fit=crop"
+                alt="Web Design Project"
+              />
+            </div>
+            <span class="project-category">Web Design</span>
+            <h3 class="project-name">AirCalling Landing Page Design</h3>
+          </div>
+
+          <div class="project-card" data-category="web-design">
+            <div class="project-image">
+              <img
+                src="https://images.unsplash.com/photo-1460925895917-afdab827c52f?w=400&h=300&fit=crop"
+                alt="Web Design Project"
+              />
+            </div>
+            <span class="project-category">Web Design</span>
+            <h3 class="project-name">Business Landing Page Design</h3>
+          </div>
+
+          <div class="project-card" data-category="web-design">
+            <div class="project-image">
+              <img
+                src="https://images.unsplash.com/photo-1522542550221-31fd8575f4b5?w=400&h=300&fit=crop"
+                alt="Web Design Project"
+              />
+            </div>
+            <span class="project-category">Web Design</span>
+            <h3 class="project-name">Ecom Web Page Design</h3>
+          </div>
+
+          <div class="project-card" data-category="app-design">
+            <div class="project-image">
+              <img
+                src="https://images.unsplash.com/photo-1512941937669-90a1b58e7e9c?w=400&h=300&fit=crop"
+                alt="App Design Project"
+              />
+            </div>
+            <span class="project-category">App Design</span>
+            <h3 class="project-name">Mobile Banking App</h3>
+          </div>
+
+          <div class="project-card" data-category="graphic-design">
+            <div class="project-image">
+              <img
+                src="https://images.unsplash.com/photo-1626785774625-ddcddc3445e9?w=400&h=300&fit=crop"
+                alt="Graphic Design Project"
+              />
+            </div>
+            <span class="project-category">Graphic Design</span>
+            <h3 class="project-name">Brand Identity Design</h3>
+          </div>
+        </div>
+      </div>
     </section>
     <section id="testimonials">
       <h2>Testimonials</h2>
@@ -375,5 +463,6 @@
     <script src="script/mobile-menu.js"></script>
     <script src="script/slider.js"></script>
     <script src="script/skills.js"></script>
+    <script src="script/projects.js"></script>
   </body>
 </html>
