--- a/index.html
+++ b/index.html
@@ -453,16 +453,251 @@
         </div>
       </div>
     </section>
-    <section id="testimonials">
-      <h2>Testimonials</h2>
+    <section id="testimonials" class="testimonials-section">
+      <div class="testimonials-container">
+        <h2 class="testimonials-title">Testimonials</h2>
+        <p class="testimonials-description">
+          Lorem ipsum dolor sit amet consectetur. Tristique amet sed massa nibh
+          lectus netus in. Aliquet donec morbi convallis pretium
+        </p>
+
+        <div class="testimonial-slider">
+          <div class="testimonial-slide active">
+            <div class="testimonial-card">
+              <div class="testimonial-avatar">
+                <img
+                  src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?w=100&h=100&fit=crop&crop=face"
+                  alt="John Smith"
+                />
+              </div>
+              <div class="testimonial-content">
+                <span class="quote-mark">"</span>
+                <p class="testimonial-text">
+                  Lorem ipsum dolor sit amet consectetur. In enim cursus odio
+                  accumsan. Id leo urna velit neque mattis id tellus arcu
+                  condimentum. Augue dictum dolor elementum convallis dignissim
+                  malesuada commodo ultrices.
+                </p>
+                <span class="quote-mark end">"</span>
+                <h4 class="testimonial-name">John Smith</h4>
+                <span class="testimonial-role">CEO</span>
+              </div>
+            </div>
+          </div>
+
+          <div class="testimonial-slide">
+            <div class="testimonial-card">
+              <div class="testimonial-avatar">
+                <img
+                  src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?w=100&h=100&fit=crop&crop=face"
+                  alt="Sarah Johnson"
+                />
+              </div>
+              <div class="testimonial-content">
+                <span class="quote-mark">"</span>
+                <p class="testimonial-text">
+                  Exceptional work and attention to detail. The design exceeded
+                  our expectations and the communication throughout the project
+                  was outstanding. Highly recommend for any design project.
+                </p>
+                <span class="quote-mark end">"</span>
+                <h4 class="testimonial-name">Sarah Johnson</h4>
+                <span class="testimonial-role">Marketing Director</span>
+              </div>
+            </div>
+          </div>
+
+          <div class="testimonial-slide">
+            <div class="testimonial-card">
+              <div class="testimonial-avatar">
+                <img
+                  src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?w=100&h=100&fit=crop&crop=face"
+                  alt="Michael Brown"
+                />
+              </div>
+              <div class="testimonial-content">
+                <span class="quote-mark">"</span>
+                <p class="testimonial-text">
+                  Working with this designer was a fantastic experience. They
+                  understood our vision perfectly and delivered a beautiful,
+                  functional design that our users love. Will definitely work
+                  together again.
+                </p>
+                <span class="quote-mark end">"</span>
+                <h4 class="testimonial-name">Michael Brown</h4>
+                <span class="testimonial-role">Product Manager</span>
+              </div>
+            </div>
+          </div>
+
+          <div class="testimonial-slide">
+            <div class="testimonial-card">
+              <div class="testimonial-avatar">
+                <img
+                  src="https://images.unsplash.com/photo-1438761681033-6461ffad8d80?w=100&h=100&fit=crop&crop=face"
+                  alt="Emily Davis"
+                />
+              </div>
+              <div class="testimonial-content">
+                <span class="quote-mark">"</span>
+                <p class="testimonial-text">
+                  Professional, creative, and reliable. The UI/UX design
+                  transformed our application completely. Our user engagement
+                  increased by 40% after the redesign. Truly impressive results.
+                </p>
+                <span class="quote-mark end">"</span>
+                <h4 class="testimonial-name">Emily Davis</h4>
+                <span class="testimonial-role">Startup Founder</span>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="testimonial-dots">
+          <button class="testimonial-dot active" data-slide="0"></button>
+          <button class="testimonial-dot" data-slide="1"></button>
+          <button class="testimonial-dot" data-slide="2"></button>
+          <button class="testimonial-dot" data-slide="3"></button>
+        </div>
+      </div>
     </section>
-    <section id="contact">
-      <h2>Contact</h2>
+    <section id="contact" class="contact-section">
+      <div class="contact-container">
+        <h2 class="contact-title">Contact Us</h2>
+        <p class="contact-description">
+          Lorem ipsum dolor sit amet consectetur. Tristique amet sed massa nibh
+          lectus netus in. Aliquet donec morbi convallis pretium
+        </p>
+
+        <form id="contactForm" class="contact-form">
+          <div class="form-row">
+            <input type="text" name="name" placeholder="Your Name" required />
+            <input
+              type="email"
+              name="email"
+              placeholder="Enter Your Email"
+              required
+            />
+            <input
+              type="text"
+              name="website"
+              placeholder="Enter Your Website"
+            />
+          </div>
+          <textarea
+            name="message"
+            placeholder="Enter Your Message"
+            rows="5"
+            required
+          ></textarea>
+          <button type="submit" class="btn-submit">Contact Me</button>
+        </form>
+      </div>
     </section>
+
+    <div id="successModal" class="modal-overlay">
+      <div class="modal-content">
+        <button class="modal-close" onclick="closeModal()">&times;</button>
+        <div class="modal-icon">✓</div>
+        <p class="modal-text">
+          Thank you for getting in touch! We appreciate you contacting us.
+        </p>
+        <button class="modal-btn" onclick="closeModal()">OK</button>
+      </div>
+    </div>
+
+    <footer class="footer">
+      <div class="footer-container">
+        <nav class="footer-nav">
+          <a href="#home">Home</a>
+          <a href="#about">About Me</a>
+          <a href="#services">Services</a>
+          <a href="#projects">Projects</a>
+          <a href="#testimonials">Testimonials</a>
+          <a href="#contact">Contact</a>
+        </nav>
+
+        <div class="footer-social">
+          <a
+            href="https://facebook.com"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="20"
+              height="20"
+              viewBox="0 0 24 24"
+              fill="currentColor"
+            >
+              <path
+                d="M12 2.04C6.5 2.04 2 6.53 2 12.06C2 17.06 5.66 21.21 10.44 21.96V14.96H7.9V12.06H10.44V9.85C10.44 7.34 11.93 5.96 14.22 5.96C15.31 5.96 16.45 6.15 16.45 6.15V8.62H15.19C13.95 8.62 13.56 9.39 13.56 10.18V12.06H16.34L15.89 14.96H13.56V21.96A10 10 0 0 0 22 12.06C22 6.53 17.5 2.04 12 2.04Z"
+              />
+            </svg>
+          </a>
+          <a
+            href="https://twitter.com"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="20"
+              height="20"
+              viewBox="0 0 24 24"
+              fill="currentColor"
+            >
+              <path
+                d="M22.46 6c-.77.35-1.6.58-2.46.69.88-.53 1.56-1.37 1.88-2.38-.83.5-1.75.85-2.72 1.05C18.37 4.5 17.26 4 16 4c-2.35 0-4.27 1.92-4.27 4.29 0 .34.04.67.11.98C8.28 9.09 5.11 7.38 3 4.79c-.37.63-.58 1.37-.58 2.15 0 1.49.75 2.81 1.91 3.56-.71 0-1.37-.2-1.95-.5v.03c0 2.08 1.48 3.82 3.44 4.21a4.22 4.22 0 0 1-1.93.07 4.28 4.28 0 0 0 4 2.98 8.521 8.521 0 0 1-5.33 1.84c-.34 0-.68-.02-1.02-.06C3.44 20.29 5.7 21 8.12 21 16 21 20.33 14.46 20.33 8.79c0-.19 0-.37-.01-.56.84-.6 1.56-1.36 2.14-2.23z"
+              />
+            </svg>
+          </a>
+          <a
+            href="https://instagram.com"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="20"
+              height="20"
+              viewBox="0 0 24 24"
+              fill="currentColor"
+            >
+              <path
+                d="M7.8 2h8.4C19.4 2 22 4.6 22 7.8v8.4a5.8 5.8 0 0 1-5.8 5.8H7.8C4.6 22 2 19.4 2 16.2V7.8A5.8 5.8 0 0 1 7.8 2m-.2 2A3.6 3.6 0 0 0 4 7.6v8.8C4 18.39 5.61 20 7.6 20h8.8a3.6 3.6 0 0 0 3.6-3.6V7.6C20 5.61 18.39 4 16.4 4H7.6m9.65 1.5a1.25 1.25 0 0 1 1.25 1.25A1.25 1.25 0 0 1 17.25 8 1.25 1.25 0 0 1 16 6.75a1.25 1.25 0 0 1 1.25-1.25M12 7a5 5 0 0 1 5 5 5 5 0 0 1-5 5 5 5 0 0 1-5-5 5 5 0 0 1 5-5m0 2a3 3 0 0 0-3 3 3 3 0 0 0 3 3 3 3 0 0 0 3-3 3 3 0 0 0-3-3z"
+              />
+            </svg>
+          </a>
+          <a
+            href="https://linkedin.com"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="20"
+              height="20"
+              viewBox="0 0 24 24"
+              fill="currentColor"
+            >
+              <path
+                d="M19 3a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h14m-.5 15.5v-5.3a3.26 3.26 0 0 0-3.26-3.26c-.85 0-1.84.52-2.32 1.3v-1.11h-2.79v8.37h2.79v-4.93c0-.77.62-1.4 1.39-1.4a1.4 1.4 0 0 1 1.4 1.4v4.93h2.79M6.88 8.56a1.68 1.68 0 0 0 1.68-1.68c0-.93-.75-1.69-1.68-1.69a1.69 1.69 0 0 0-1.69 1.69c0 .93.76 1.68 1.69 1.68m1.39 9.94v-8.37H5.5v8.37h2.77z"
+              />
+            </svg>
+          </a>
+        </div>
+
+        <div class="footer-copyright">© 2023 All Rights Reserved, Inc.</div>
+      </div>
+      <div class="footer-border"></div>
+    </footer>
 
     <script src="script/mobile-menu.js"></script>
     <script src="script/slider.js"></script>
     <script src="script/skills.js"></script>
     <script src="script/projects.js"></script>
+    <script src="script/testimonials.js"></script>
+    <script src="script/contact.js"></script>
   </body>
 </html>
